  * The project view has a fixed width that doesn't change if you resize the main window (Tim Felgentreff)
  * Optional margin that colours text differently past a configurable column. (Dan Lucraft)
  * Experimental app bundle for Mac OSX. (Tim Felgentreff)
  * Moved to JRuby 1.5 (Dan Lucraft)
  * Opens content from standard in (Dan Lucraft)

New APIs:

  * Annotations column (Dan Lucraft)
  * Open popup menu and tooltips at cursor/pointer locations (Dan Lucraft)
  
New contributors:

  * Nizar Jouini

Version 0.3.5dev (1 May 2010)
=============================

Enhancements:
  
  * Jump to declaration support for Ruby and Java
  * Double click respects word boundaries
  * Window title reflects project name
  * Duplicate region command
  * Switch tab with Alt-1, Alt-2 (or Cmd-1, Cmd-2 on OSX)
  * Prompts to save modified tabs on tab, window or application close
  * Snippet menus show tab trigger more nicely (linux/windows)
  * Watches to changes to open files, and prompts to revert
  * Project view sorts directories before files (by popular request!)
  * Shows menu bar on OSX when there are no windows open
  * Halve startup time from 0.3.4 (warm startup)
  * Added background Task APIs.
  * Task Manager
  * Added ProjectRefresh Task API
  * No longer dumps command errors to the console
  * Command history tab
  * Speed up opening of first file by lazy loading embedded grammars
  * Sped up Ruby highlighting by 17x
  * Doesn't die on long lines (gives up after 500 characters now)
  * Added show/hide invisible characters menu option
  * Smart indentation as you type (based on Textmate bundle rules)
  * Add profiling commands to the Debug menu (uses jruby-prof)
  * Lazy menus API
  * Commands to profile Redcar with jruby-prof.
  
Fixes:

  * Fix delete at end of line when using "\r\n" delimiter
  * Increase and decrease indent commands respect soft tabs and tab width settings
  * Directory tree sorts correctly
  * Speed up opening a project (about 1s faster)
  